v3.7.6 (XXXX-XX-XX)
-------------------

* Added new metric: "arangodb_collection_lock_sequential_mode" this will count
  how many times we need to do a sequential locking of collections. If this
  metric increases this indicates lock contention in transaction setup.
  Most likely this is caused by exlcusive locks used on collections with more
  than one shard.
  
* Fix for BTS-213
  Changed the transaction locking mechanism in the cluster case.
  For all installations that do not use "exclusive" collection locks this change
  will not be noticable. In case of "exclusive" locks, and collections with more
  than one shard, it is now less likely to get a LOCK_TIMEOUT (ErrorNum 18).
  It is still possible to get into the LOCK_TIMEOUT case, especially if the
  "exclusive" operation(s) are long-running.

* Fixed an endless busy loop which could happen if a coordinator tries to roll
  back a database creation, but the database has already been dropped by other
  means.

* Make internal ClusterInfo::getPlan() wait for initial plan load from agency.

* Remove HTTP "Connection" header when forwarding requests in the cluster from
  one coordinator to another, and let the internal network layer handle closing
  of connections and keep-alive.

* Prevent a write to RocksDB during recovery in the case that the database
  already exists. The write at startup is potentially blocking, and will delay
  the startup for servers that were shut down while in a write-stopped state.

* Fix recovery of "clientId" values in Agency when restarting an agent from
  persistence.

* Added "startupTime", "computationTime" and "storageTime" to Pregel result
  statistics.

* Add query execution time and query id to audit log query messages.

* Fixed issue #13238 Thread naming API on Windows are now used only if
  available in KERNEL32.DLL

* Fix for issue #772: Optimized document counting for ArangoSearch views.
  Added new ArangoSearch view option 'countApproximate' for customizing view